# minions

./: .gitignore  .python-version  ALL_FIXES_SUMMARY.md  AUTH_FIX.md  Dockerfile  EVENT_LOOP_FIX.md  FIXES_APPLIED.md  README.md  VALIDATION_FIX_SUMMARY.md  app.py  bm25_document_search.py  chat_app.py  dataset_eval.py  deep_research_ui.py  energy_ablation.py  example_context.txt  local_rag_document_search.py  mcp.json  minions_cli.py  minions_secure_app.py  minions_secure_chat.py  requirements.txt  secure_streamlit_chat.py  setup.py  story_test.txt  test_secure.ipynb
apps/minions-a2a/: .gitignore  BUGS_AND_ISSUES_REPORT.md  BUG_FIXES_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  manage_api_keys.py  manage_oauth2_clients.py  minions_paper.txt  pyproject.toml  requirements.txt  run_server.py  run_test_server.py  spec.html
apps/minions-a2a/a2a_minions/: __init__.py  __main__.py  agent_cards.py  auth.py  client_factory.py  config.py  converter.py  converters.py  metrics.py  models.py  server.py
apps/minions-a2a/examples/webapp/: README.md  app.py  requirements.txt  run_webapp.py
apps/minions-a2a/examples/webapp/templates/: index.html
apps/minions-a2a/tests/: BROKEN_COMPONENTS.md  README.md  __init__.py  run_tests.py  run_unit_tests.py  test_client_minion.py  test_client_minions.py  test_minion_query.py  test_minions_query.py
apps/minions-a2a/tests/integration/: run_integration_tests.py  test_client_minion.py  test_client_minions.py
apps/minions-a2a/tests/unit/: test_agent_cards.py  test_auth.py  test_client_factory.py  test_config.py  test_converters.py  test_metrics.py  test_models.py  test_server.py
minion_logs/: 20250402_233551_Open_TextEdit_a_cua.json
minions/: autominion.py  minion.py  minion_code.py  minion_cua.py  minions.py  minions_deep_research.py  minions_mcp.py  usage.py
secure/: CHANGELOG.md  (+3 more)
(+128 files in other folders)
