[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-minions"
version = "0.1.0"
description = "A2A (Agent-to-Agent) server for the Minions protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Minions A2A Team"}
]
keywords = ["a2a", "minions", "llm", "agents", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

a2a = [
    "a2a-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/HazyResearch/minions"
Repository = "https://github.com/HazyResearch/minions"
Documentation = "https://github.com/HazyResearch/minions/tree/main/apps/minions-a2a"

[project.scripts]
a2a-minions-server = "a2a_minions.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a_minions*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 